// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppsTable should render component with apps 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-mb11"
      >
        <h2
          class="el-subtitle"
        >
          Total Apps
        </h2>
        <p
          class="el-has-grey-text el-body-text"
        >
          1
        </p>
        <div
          class="el-table"
          data-has-call-to-action="false"
          data-has-expandable-action="true"
          data-num-columns-excl-action-col="10"
        >
          <div
            class="el-table-headers-row"
          >
            <div
              class="el-table-header"
            >
              App Name
            </div>
            <div
              class="el-table-header"
            >
              AppId
            </div>
            <div
              class="el-table-header"
            >
              Summary
            </div>
            <div
              class="el-table-header"
            >
              Developer Name
            </div>
            <div
              class="el-table-header"
            >
              Listed
            </div>
            <div
              class="el-table-header"
            >
              Integration
            </div>
            <div
              class="el-table-header"
            >
              Featured
            </div>
            <div
              class="el-table-header"
            >
              Created
            </div>
            <div
              class="el-table-header"
            >
              Publicly Listed
            </div>
            <div
              class="el-table-header"
            >
              Public
            </div>
            <div
              class="el-table-header"
            >
              <span
                class="el-icon"
                style="font-size: 1.2rem;"
              >
                <svg />
              </span>
            </div>
          </div>
          <div
            class="el-table-row-container"
          >
            <div
              class="el-table-row"
            >
              <div
                class="el-table-cell-has-dark-text el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="App Name"
                >
                  Reapit Insights
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="AppId"
                >
                  f83e679e-a7cd-4889-a7f9-f4a8a8ed5a09
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Summary"
                >
                  Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah.
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Developer Name"
                >
                  Reapit Ltd Internal
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Listed"
                >
                  <span
                    class="el-intent-success el-icon"
                  >
                    <svg />
                  </span>
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Integration"
                >
                  <span
                    class="el-intent-danger el-icon"
                  >
                    <svg />
                  </span>
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Featured"
                >
                  <span
                    class="el-intent-danger el-icon"
                  >
                    <svg />
                  </span>
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Created"
                >
                  04 Mar 2021 09:37
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Publicly Listed"
                >
                  -
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Public"
                >
                  <span
                    class="el-intent-danger el-icon"
                  >
                    <svg />
                  </span>
                </div>
              </div>
              <div
                class="el-table-expandable-row-trigger-cell"
              >
                <span
                  class="el-intent-secondary el-icon"
                >
                  <svg />
                </span>
              </div>
            </div>
            <div
              class="el-table-expandable-row"
            >
              <div
                class="el-table-expandable-container"
              >
                <div
                  class="el-button-group"
                >
                  <div
                    class="el-button-group-align-center el-button-group-inner"
                  >
                    <button
                      class="el-intent-secondary el-button"
                    >
                      View in AppMarket
                      <div
                        class="el-button-loader"
                      />
                    </button>
                    <button
                      class="el-intent-secondary el-button"
                      disabled=""
                    >
                      View in DevPortal
                      <div
                        class="el-button-loader"
                      />
                    </button>
                    <button
                      class="el-intent-primary el-button"
                    >
                      Check AWS Only
                      <div
                        class="el-button-loader"
                      />
                    </button>
                    <button
                      class="el-intent-danger el-button"
                      disabled=""
                      type="button"
                    >
                      Delete
                      <div
                        class="el-button-loader"
                      />
                    </button>
                    <button
                      class="el-intent-primary el-button"
                      disabled=""
                    >
                      Toggle Subscription
                      <div
                        class="el-button-loader"
                      />
                    </button>
                    <button
                      class="el-intent-primary el-button"
                      disabled=""
                    >
                      Togggle Featured
                      <div
                        class="el-button-loader"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-mb11"
    >
      <h2
        class="el-subtitle"
      >
        Total Apps
      </h2>
      <p
        class="el-has-grey-text el-body-text"
      >
        1
      </p>
      <div
        class="el-table"
        data-has-call-to-action="false"
        data-has-expandable-action="true"
        data-num-columns-excl-action-col="10"
      >
        <div
          class="el-table-headers-row"
        >
          <div
            class="el-table-header"
          >
            App Name
          </div>
          <div
            class="el-table-header"
          >
            AppId
          </div>
          <div
            class="el-table-header"
          >
            Summary
          </div>
          <div
            class="el-table-header"
          >
            Developer Name
          </div>
          <div
            class="el-table-header"
          >
            Listed
          </div>
          <div
            class="el-table-header"
          >
            Integration
          </div>
          <div
            class="el-table-header"
          >
            Featured
          </div>
          <div
            class="el-table-header"
          >
            Created
          </div>
          <div
            class="el-table-header"
          >
            Publicly Listed
          </div>
          <div
            class="el-table-header"
          >
            Public
          </div>
          <div
            class="el-table-header"
          >
            <span
              class="el-icon"
              style="font-size: 1.2rem;"
            >
              <svg />
            </span>
          </div>
        </div>
        <div
          class="el-table-row-container"
        >
          <div
            class="el-table-row"
          >
            <div
              class="el-table-cell-has-dark-text el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="App Name"
              >
                Reapit Insights
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="AppId"
              >
                f83e679e-a7cd-4889-a7f9-f4a8a8ed5a09
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Summary"
              >
                Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah.
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Developer Name"
              >
                Reapit Ltd Internal
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Listed"
              >
                <span
                  class="el-intent-success el-icon"
                >
                  <svg />
                </span>
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Integration"
              >
                <span
                  class="el-intent-danger el-icon"
                >
                  <svg />
                </span>
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Featured"
              >
                <span
                  class="el-intent-danger el-icon"
                >
                  <svg />
                </span>
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Created"
              >
                04 Mar 2021 09:37
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Publicly Listed"
              >
                -
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Public"
              >
                <span
                  class="el-intent-danger el-icon"
                >
                  <svg />
                </span>
              </div>
            </div>
            <div
              class="el-table-expandable-row-trigger-cell"
            >
              <span
                class="el-intent-secondary el-icon"
              >
                <svg />
              </span>
            </div>
          </div>
          <div
            class="el-table-expandable-row"
          >
            <div
              class="el-table-expandable-container"
            >
              <div
                class="el-button-group"
              >
                <div
                  class="el-button-group-align-center el-button-group-inner"
                >
                  <button
                    class="el-intent-secondary el-button"
                  >
                    View in AppMarket
                    <div
                      class="el-button-loader"
                    />
                  </button>
                  <button
                    class="el-intent-secondary el-button"
                    disabled=""
                  >
                    View in DevPortal
                    <div
                      class="el-button-loader"
                    />
                  </button>
                  <button
                    class="el-intent-primary el-button"
                  >
                    Check AWS Only
                    <div
                      class="el-button-loader"
                    />
                  </button>
                  <button
                    class="el-intent-danger el-button"
                    disabled=""
                    type="button"
                  >
                    Delete
                    <div
                      class="el-button-loader"
                    />
                  </button>
                  <button
                    class="el-intent-primary el-button"
                    disabled=""
                  >
                    Toggle Subscription
                    <div
                      class="el-button-loader"
                    />
                  </button>
                  <button
                    class="el-intent-primary el-button"
                    disabled=""
                  >
                    Togggle Featured
                    <div
                      class="el-button-loader"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppsTable should render component with no apps 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-mb11"
      >
        <div
          class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
        >
          <div
            class="el-pn-icon"
            data-testid="close-icon"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-pn-content"
          >
            No results found for your selected filters
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-mb11"
    >
      <div
        class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
      >
        <div
          class="el-pn-icon"
          data-testid="close-icon"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </div>
        <div
          class="el-pn-content"
        >
          No results found for your selected filters
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
